--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@ background-color: transparent;
 </font>
 </h1>
 <div style="text-align:center">
-<button id="hen" class="button" onmouseover="dicas2('e1')" onMouseOut="fora()"  onclick="load_exploit_HEN(); return false"><font size="4">HEN 2.1.3</font></button> 
-<h1 id=msgAuto style='font-size:30px;text-align:center;color:#6089f6;'>Auto HEN 2.1.3 <font color="#ee596f">ATIVADO</font></h1>
+<button id="hen" class="button" onmouseover="dicas2('e1')" onMouseOut="fora()"  onclick="load_exploit_HEN(); return false"><font size="4">HEN 2.1.3b</font></button> 
+<h1 id=msgAuto style='font-size:30px;text-align:center;color:#6089f6;'>Auto HEN 2.1.3b <font color="#ee596f">ATIVADO</font></h1>
 </div>
 <br>
 <div style="text-align:center"><font size="3" color="#6089f6"><b><span id=passCounter></span></b> Sucesso(s)</font>&nbsp;&nbsp;/&nbsp;&nbsp;<font size="3" color="#ee596f"><b><span id=failCounter></span></b> Falha(s)</font></div>
@@ -115,7 +115,7 @@ case '3':document.getElementById("msgs").innerHTML = "Não entre mais no navegad
 case '4':document.getElementById("msgs").innerHTML = "Ao ligar pela primeira vez no dia, aguarde 2 minuto.";break;
 case '5':document.getElementById("msgs").innerHTML = "Seguidos KP, deslige totalmente e retire o cabo de força, por 10 minutos.";break;
 case '6':document.getElementById("msgs").innerHTML = "ainda será implementado";break;
-case 'e1':document.getElementById("msgs").innerHTML = "Ativa Jailbreak + <font style='color:#ee596f;'>HEN v2.1.3</font> (Leeful).";break;
+case 'e1':document.getElementById("msgs").innerHTML = "Ativa Jailbreak + <font style='color:#ee596f;'>HEN v2.1.3b</font> (Leeful).";break;
 default:document.getElementById("msgs").innerHTML = "erro";
 }
 }
