--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html manifest="cache.manifest">
 <head>
-<title>PS4 Exploit 6.72</title>
+<title>PS4 Exploit 6.72 Light</title>
 <style>
 body{
 color: white;
